--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/bundle.js"></script>
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   </body>
 </html>
